NetBSD Problem Report #43961

From yamt@NetBSD.org  Tue Oct 12 02:28:56 2010
Return-Path: <yamt@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1270)
	id B96AE63B11D; Tue, 12 Oct 2010 02:28:56 +0000 (UTC)
Message-Id: <20101012022856.B96AE63B11D@www.NetBSD.org>
Date: Tue, 12 Oct 2010 02:28:56 +0000 (UTC)
From: yamt@NetBSD.org
Reply-To: yamt@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: uninitialized variable in termcap.c
X-Send-Pr-Version: 3.95

>Number:         43961
>Category:       lib
>Synopsis:       uninitialized variable in termcap.c
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Oct 12 02:30:00 +0000 2010
>Closed-Date:    Tue Oct 12 19:49:09 +0000 2010
>Last-Modified:  Tue Oct 12 19:49:09 +0000 2010
>Originator:     YAMAMOTO Takashi
>Release:        NetBSD current
>Organization:

>Environment:


>Description:
	gcc complains as the following.  it seems that gcc is correct.

/siro/nbsd/src/lib/libterminfo/termcap.c(283): warning: n may be used before set [158]


>How-To-Repeat:

>Fix:


>Release-Note:

>Audit-Trail:
From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43961 CVS commit: src/lib/libterminfo
Date: Tue, 12 Oct 2010 08:49:28 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Tue Oct 12 12:49:27 UTC 2010

 Modified Files:
 	src/lib/libterminfo: termcap.c

 Log Message:
 PR/43961: YAMAMOTO Takashi: uninitialized variable in termcap.c
 Remove dead code.


 To generate a diff of this commit:
 cvs rdiff -u -r1.9 -r1.10 src/lib/libterminfo/termcap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 12 Oct 2010 19:49:09 +0000
State-Changed-Why:
fixed, thanks christos :-)


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.