PR/43961: YAMAMOTO Takashi: uninitialized variable in termcap.c Remove dead code.